force-app/main/default/objects/Task_List_Template__c/Task_List_Template__c.object-meta.xml
<CustomObject>
    <label>Task List Template</label>
    <nameField>
        <displayFormat>TLT-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task List Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>