force-app/main/default/objects/Task_List_Template__c/fields/Object_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Object_Status_Field__c</fullName>
    <inlineHelpText>Object field name with namespace</inlineHelpText>
    <label>Object Status Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>