force-app/main/default/objects/Task_List_Template__c/fields/Task_List_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_List_Template_Name__c</fullName>
    <description>hyperlink field to use instead of autonumber field</description>
    <formula>HYPERLINK(&#39;/&#39;+ Id , Object_Name__c &amp;&#39; - &#39;&amp; Object_Status_Field__c &amp;&#39; - &#39;&amp; Trigger_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task List Template Name</label>
    <type>Text</type>
</CustomField>