force-app/main/default/objects/Task_List_Template__c/fields/Trigger_Status__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Status__c</fullName>
    <label>Trigger Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>