force-app/main/default/objects/Task_List_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Object_Status_Field__c</columns>
    <columns>Trigger_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>